--- a/main.bib
+++ b/main.bib
@@ -636,3 +636,14 @@
 	author={Le Berre, Daniel and Parrain, Anne},
 	year={2008}
 }
+
+
+
+@inproceedings{biere1999symbolic,
+	title={Symbolic model checking without BDDs},
+	author={Biere, Armin and Cimatti, Alessandro and Clarke, Edmund and Zhu, Yunshan},
+	booktitle={International conference on tools and algorithms for the construction and analysis of systems},
+	pages={193--207},
+	year={1999},
+	organization={Springer}
+}
